--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 body::before {
     content: "";
-    background-image: url('/background.jpg'); 
+    background-image: url('background.jpg'); 
     position: absolute;
     top: 0;
     right: 0;
